--- a/notebooks/parse_slack_data.ipynb
+++ b/notebooks/parse_slack_data.ipynb
@@ -587,14 +587,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:28: DeprecationWarning: invalid escape sequence '\\w'\n",
+      "<>:28: DeprecationWarning: invalid escape sequence '\\w'\n",
+      "/tmp/ipykernel_13505/3924896878.py:28: DeprecationWarning: invalid escape sequence '\\w'\n",
+      "  mention_count_by_message = parsed_data['msg_content'].str.count('@\\w+').groupby(parsed_data['msg_content']).sum().reset_index(name='Mention count')\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data inserted successfully.\n"
+      "\n",
+      "Top 10 Messages by Reply Count:\n",
+      "                                             msg_content  Reply count\n",
+      "2304           <@u03v1am5tfa> how many crushes you have?           75\n",
+      "6051   first impression: people think i am older than...           63\n",
+      "476    1. how do i find my jupyter notebook file in m...           61\n",
+      "7475   how many here follow football so much? i think...           57\n",
+      "5915                     ethiopian new year loading ....           54\n",
+      "6775   hello\\n1. <@u03uvhcv6kb>\\n2. <@u03ug5vfn03>\\n3...           45\n",
+      "2151   <@u03uur571a5> solutions to funding account an...           44\n",
+      "13902  we had a plan to meet today 2:00 eat at friend...           36\n",
+      "120    *<!here> reminder*:timer_clock:\\n\\n*please not...           33\n",
+      "12960  the debate was great. we <@u03u1j51vfz>, <@u03...           31\n",
+      "\n",
+      "Top 10 Messages by Reaction Count:\n",
+      "                                             msg_content  Reaction count\n",
+      "12960  the debate was great. we <@u03u1j51vfz>, <@u03...              12\n",
+      "10156  let's follow each other. drop your link in thi...              11\n",
+      "1029   <!channel> do we have people who are in the sa...              11\n",
+      "6296                                    good morning all              10\n",
+      "262    *here are some other stories from people that ...              10\n",
+      "7475   how many here follow football so much? i think...              10\n",
+      "1189   <!here>, aws instance is being setup for every...               8\n",
+      "4096   _interpreters study group_\\nhello, i am starti...               8\n",
+      "14501    which teams are we supporting in the world cup?               8\n",
+      "11019    nothing. my partner deserves to know everything               8\n",
+      "\n",
+      "Top 10 Messages by Mention Count:\n",
+      "                                             msg_content  Mention count\n",
+      "7614   i am grateful for <@u03u93gnnvb>, <@u03uun8m4r...             25\n",
+      "10079  knowing <!here> is just great one way or the o...             20\n",
+      "7617   i am grateful to <@u03u9db7reg> for answering ...             17\n",
+      "505    1. work ethic\\n2. how communication and openne...             16\n",
+      "2200   <@u03uvhcv6kb> <@u03uup56mdf> <@u03ujgrn5e0> <...             13\n",
+      "12745  thanks to the team <@u03up7v9q57> <@u03ukl27b0...             12\n",
+      "10719  news news *<!here>*........:drum_with_drumstic...              9\n",
+      "2201   <@u03uvhcv6kb> <@u03v61vgqg0> <@u03ujgrn5e0> <...              8\n",
+      "6775   hello\\n1. <@u03uvhcv6kb>\\n2. <@u03ug5vfn03>\\n3...              8\n",
+      "6607    happy birthday <@u03ug4q7v42> and <@u03ug32j3pc>              8\n"
      ]
     }
    ],
@@ -616,11 +664,11 @@
     "parsed_data['time_thread_start'] = parsed_data['time_thread_start'].astype(str)\n",
     "parsed_data['tm_thread_end'] = parsed_data['tm_thread_end'].astype(str)\n",
     "\n",
-    "if not parsed_data.empty:\n",
-    "    slack_db.insert_many_to_collection('slack_messages', parsed_data.to_dict(orient='records'))\n",
-    "    print(\"Data inserted successfully.\")\n",
-    "else:\n",
-    "    print(\"DataFrame is empty. No data inserted.\")\n",
+    "# if not parsed_data.empty:\n",
+    "#     slack_db.insert_many_to_collection('slack_messages', parsed_data.to_dict(orient='records'))\n",
+    "#     print(\"Data inserted successfully.\")\n",
+    "# else:\n",
+    "#     print(\"DataFrame is empty. No data inserted.\")\n",
     "\n",
     "reply_count_by_message = parsed_data.groupby('msg_content')['reply_count'].sum().reset_index(name='Reply count')\n",
     "\n",
